// Messaging Data Types
//
// This file defines common data structures used across the messaging
// system for RabbitMQ configuration and queue management. These types
// provide standardized configuration for message brokers, exchanges,
// and queues in the distributed typechecking and validation system.
//
// The data types ensure consistent messaging infrastructure setup
// across all worker nodes and services in the ETL pipeline.

syntax = "proto3";

package dtypes;

// Queue configuration information for RabbitMQ setup
//
// Contains the essential configuration parameters needed to create
// and manage message queues in the RabbitMQ broker. This information
// is used by workers and services to establish proper queue connections
// and ensure reliable message delivery.
//
// Queue configuration affects message persistence, routing behavior,
// and connection reliability across the distributed system.
message QueueInfo {
    string queue = 1;       // Name of the message queue for worker communication
    string routing_key = 2; // Routing key pattern for message distribution to specific workers
    bool durable = 3;       // Persistence flag - true for queues that survive broker restarts
}

// Exchange configuration information for RabbitMQ message routing
//
// Defines the exchange configuration used for routing messages between
// producers and consumers in the messaging system. Contains exchange
// metadata and associated queue configurations for comprehensive
// messaging infrastructure setup.
//
// The exchange acts as the central routing mechanism that determines
// how messages are distributed to the appropriate worker queues based
// on routing keys and exchange type.
//
// Example usage:
//   ExchangeInfo {
//     exchange: "validation_exchange"
//     type: "direct"
//     durable: true
//     queues: [
//       {queue: "schema_queue", routing_key: "schema.upload", durable: true},
//       {queue: "validation_queue", routing_key: "validation.sample", durable: true}
//     ]
//   }
message ExchangeInfo {
    string exchange = 1;            // Name of the RabbitMQ exchange for message routing
    string type = 2;                // Exchange type (direct, topic, fanout, headers) defining routing behavior
    bool durable = 3;               // Persistence flag - true for exchanges that survive broker restarts
    repeated QueueInfo queues = 4;  // List of queues bound to this exchange with their routing configurations
}
